--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -15,7 +16,125 @@
         android:layout_height="match_parent"
         android:background="@color/colorDarkGrey">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/user_grade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="40dp"
+                android:gravity="center"
+                android:text="@{vm.userGrade}"
+                android:textColor="@color/colorWhite"
+                android:textSize="35sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="유머쪼랩ㅋ" />
+
+            <TextView
+                android:id="@+id/user_grade_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@{vm.userGradeText}"
+                android:textColor="@color/colorWhite"
+                android:textSize="35sp"
+                app:layout_constraintStart_toStartOf="@id/user_grade"
+                app:layout_constraintTop_toBottomOf="@id/user_grade"
+                tools:text="분발하자^^" />
+
+            <TextView
+                android:id="@+id/post_number_text"
+                android:layout_width="42dp"
+                android:layout_height="18dp"
+                android:layout_marginTop="33dp"
+                android:background="@drawable/bg_humor_grade_progress_button"
+                android:gravity="center"
+                android:text="게시글"
+                android:textColor="@color/colorPurple"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/user_grade"
+                app:layout_constraintTop_toBottomOf="@id/user_grade_text" />
+
+            <TextView
+                android:id="@+id/post_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@{@string/count(vm.postCount)}"
+                android:textColor="@color/colorWhite"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/post_number_text"
+                app:layout_constraintStart_toEndOf="@id/post_number_text"
+                app:layout_constraintTop_toTopOf="@id/post_number_text"
+                tools:text="14개" />
+
+            <TextView
+                android:id="@+id/comment_number_text"
+                android:layout_width="37dp"
+                android:layout_height="19dp"
+                android:layout_marginStart="16dp"
+                android:background="@drawable/bg_humor_grade_progress_button"
+                android:gravity="center"
+                android:text="댓글"
+                android:textColor="@color/colorPurple"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/post_number_text"
+                app:layout_constraintStart_toEndOf="@id/post_number"
+                app:layout_constraintTop_toTopOf="@id/post_number_text" />
+
+            <TextView
+                android:id="@+id/comment_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@{@string/count(vm.commentCount)}"
+                android:textColor="@color/colorWhite"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/comment_number_text"
+                app:layout_constraintStart_toEndOf="@id/comment_number_text"
+                app:layout_constraintTop_toTopOf="@id/comment_number_text"
+                tools:text="4개" />
+
+            <TextView
+                android:id="@+id/humor_count_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="11dp"
+                android:text="@string/humor_count_text"
+                android:textColor="@color/colorWhite"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/comment_number"
+                app:layout_constraintStart_toEndOf="@id/comment_number"
+                app:layout_constraintTop_toTopOf="@id/comment_number" />
+
+            <ProgressBar
+                style="@style/HumorGradeProgressbar"
+                android:layout_width="0dp"
+                android:layout_height="9dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="9dp"
+                android:layout_marginBottom="42dp"
+                android:progress="@{vm.humorGradeProgress}"
+                android:progressDrawable="@drawable/humor_grade_progressbar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/post_number_text"
+                tools:progress="70" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <include
+            android:id="@+id/bottom_sheet_include"
             layout="@layout/bottom_sheet_main"
             bind:humors="@{vm.humors}" />
 
