--- a/features/signup/src/main/res/layout/fragment_signup.xml
+++ b/features/signup/src/main/res/layout/fragment_signup.xml
@@ -1,18 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    
-    <EditText
-        android:id="@+id/btn_id_with_check"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:paddingRight="100dp"
-        android:layout_height="56dp"/>
+<layout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorDarkGrey"
+        android:padding="30dp">
+
+        <EditText
+            android:id="@+id/edit_text_id_with_check"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="@drawable/bg_rounded_button_white_border"
+            android:hint="@string/signup_id"
+            android:paddingStart="26dp"
+            android:paddingEnd="100dp"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorDarkLightGrey"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txt_id_check_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:paddingBottom="1dp"
+            android:text="@string/signup_duplicate_check"
+            android:textColor="@color/colorWhite"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/edit_text_id_with_check"
+            app:layout_constraintEnd_toEndOf="@+id/edit_text_id_with_check"
+            app:layout_constraintTop_toTopOf="@+id/edit_text_id_with_check" />
+
+        <TextView
+            android:id="@+id/txt_id_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/signup_id_check_error"
+            android:textColor="@color/colorRed"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_id_with_check" />
+
+        <EditText
+            android:id="@+id/edit_text_password"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/bg_rounded_button_white_border"
+            android:hint="@string/signup_password"
+            android:paddingStart="26dp"
+            android:paddingEnd="100dp"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorDarkLightGrey"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txt_id_error" />
+
+        <EditText
+            android:id="@+id/edit_text_password_check"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/bg_rounded_button_white_border"
+            android:hint="@string/signup_password_check"
+            android:paddingStart="26dp"
+            android:paddingEnd="100dp"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorDarkLightGrey"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edit_text_password" />
+
+        <TextView
+            android:id="@+id/txt_password_check_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="24dp"
+            android:paddingBottom="1dp"
+            android:text="@string/signup_password_check_error"
+            android:textColor="@color/colorRed"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_password_check" />
+
+        <EditText
+            android:id="@+id/edit_text_nickname"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/bg_rounded_button_white_border"
+            android:hint="@string/signup_nickname"
+            android:paddingStart="26dp"
+            android:paddingEnd="100dp"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorDarkLightGrey"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txt_password_check_error" />
+
+        <TextView
+            android:id="@+id/txt_nickname_check_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="24dp"
+            android:paddingBottom="1dp"
+            android:text="@string/signup_nickname_check_error"
+            android:textColor="@color/colorRed"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_nickname" />
+
+        <TextView
+            android:id="@+id/txt_nickname_check_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:paddingBottom="1dp"
+            android:text="@string/signup_duplicate_check"
+            android:textColor="@color/colorWhite"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/edit_text_nickname"
+            app:layout_constraintEnd_toEndOf="@+id/edit_text_nickname"
+            app:layout_constraintTop_toTopOf="@+id/edit_text_nickname" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
