--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -1,128 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorDarkGrey">
+<layout>
 
-    <TextView
-        android:id="@+id/txt_sub_guide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="36dp"
-        android:letterSpacing="-0.05"
-        android:text="@string/login_sub_guide"
-        android:textColor="@color/colorWhite"
-        android:textSize="32sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txt_guide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="22dp"
-        android:letterSpacing="-0.05"
-        android:text="@string/login_guide"
-        android:textColor="@color/colorWhite"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_sub_guide" />
-
-    <ImageView
-        android:id="@+id/img_heart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="54dp"
-        android:src="@drawable/ic_heart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:src="@drawable/ic_senior"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_heart" />
-
-    <EditText
-        android:id="@+id/edt_login_id"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginRight="30dp"
-        android:backgroundTint="@color/colorDarkLightGrey"
-        android:hint="@string/id_placeholder"
-        android:paddingBottom="20dp"
-        android:textColor="@color/colorDarkLightGrey"
-        android:textColorHint="@color/colorDarkLightGrey"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_guide" />
+        android:layout_height="match_parent"
+        android:background="@color/colorDarkGrey">
 
-    <EditText
-        android:id="@+id/edt_login_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edt_login_id"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:backgroundTint="@color/colorDarkLightGrey"
-        android:hint="@string/password_placeholder"
-        android:paddingBottom="20dp"
-        android:textColor="@color/colorDarkLightGrey"
-        android:textColorHint="@color/colorDarkLightGrey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_login_id" />
+        <TextView
+            android:id="@+id/txt_sub_guide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="36dp"
+            android:letterSpacing="-0.05"
+            android:text="@string/login_sub_guide"
+            android:textColor="@color/colorWhite"
+            android:textSize="40sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txt_forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edt_login_password"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="40dp"
-        android:text="@string/forgot_password"
-        android:textColor="@color/colorDarkLightGrey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />
+        <TextView
+            android:id="@+id/txt_guide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="22dp"
+            android:letterSpacing="-0.05"
+            android:text="@string/login_guide"
+            android:textColor="@color/colorWhite"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_sub_guide" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/rounded_button_color_purple"
-        android:text="@string/login_button"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />
+        <ImageView
+            android:id="@+id/img_heart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="54dp"
+            android:src="@drawable/ic_heart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="189dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="89dp"
-        android:gravity="center"
-        android:text="@string/guest_login"
-        android:textColor="@color/colorDarkLightGrey"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/ic_senior"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_heart" />
 
-    <TextView
-        android:id="@+id/btn_signin"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/signin_button"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        <EditText
+            android:id="@+id/edt_login_id"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:backgroundTint="@color/colorDarkLightGrey"
+            android:hint="@string/id_placeholder"
+            android:paddingBottom="20dp"
+            android:textColor="@color/colorDarkLightGrey"
+            android:textColorHint="@color/colorDarkLightGrey"
+            app:layout_constraintBottom_toTopOf="@+id/edt_login_password"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/edt_login_password"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_below="@id/edt_login_id"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="58dp"
+            android:backgroundTint="@color/colorDarkLightGrey"
+            android:hint="@string/password_placeholder"
+            android:paddingBottom="20dp"
+            android:textColor="@color/colorDarkLightGrey"
+            android:textColorHint="@color/colorDarkLightGrey"
+            app:layout_constraintBottom_toTopOf="@+id/btn_login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/txt_forgot_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edt_login_password"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:text="@string/forgot_password"
+            android:textColor="@color/colorDarkLightGrey"
+            app:layout_constraintEnd_toEndOf="@id/edt_login_password"
+            app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/rounded_button_color_purple"
+            android:text="@string/login_button"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintBottom_toTopOf="@+id/txt_guest_login_button" />
+
+        <TextView
+            android:id="@+id/txt_guest_login_button"
+            android:layout_width="189dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="89dp"
+            android:layout_marginBottom="32dp"
+            android:gravity="center"
+            android:text="@string/guest_login"
+            android:textColor="@color/colorDarkLightGrey"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/btn_signin"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="32dp"
+            android:gravity="center"
+            android:text="@string/signin_button"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/btn_login" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
